--- a/part1/styles/normalize.css
+++ b/part1/styles/normalize.css
@@ -10,9 +10,12 @@
 
  * {
   box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
  }
 
  html {
+  font-family: 'Euclid Circular A', sans-serif;
   font-size: 10px;
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
