refactor[part1]: add styling benefits, add pruducts block

--- a/part1/styles/index.css
+++ b/part1/styles/index.css
@@ -2,3 +2,4 @@
 @import './base/constants.css';
 @import './layouts/header.css'; 
 @import './layouts/benefiits.css';
+@import './layouts/products.css';
