--- a/part1/styles/fontello.css
+++ b/part1/styles/fontello.css
@@ -23,6 +23,11 @@
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
+  font-size: 24px;
+  background-color: var(--secondary-background);
+  color: var(--secondary-color);
+  border: 9px solid #CBECFF;
+  border-radius: 50%;
   speak: never;
 
   display: inline-block;
