--- a/part1/styles/layouts/header.css
+++ b/part1/styles/layouts/header.css
@@ -1,4 +1,5 @@
 .header {
+  padding-bottom: 120px;
   background-color: var(--secondary-background);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
