--- a/part1/styles/layouts/products.css
+++ b/part1/styles/layouts/products.css
@@ -21,3 +21,62 @@
   background: none;
   color: var(--secondary-color);
 }
+
+.products__container {
+  padding-top: 44px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.products_item {
+  padding: 20px 37px 0px 33px;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 530px;
+  min-height: 328px;
+  background: #E9F6FF;
+  border-radius: 30px;
+}
+
+.products_item:last-child {
+  margin-right: 0px;
+}
+
+.products_item__wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.products_item__title {
+  padding-top: 32px;
+  max-width: 201px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 140%;
+  color: #000000;
+}
+
+.products_item__description {
+  padding-top: 12px;
+  max-width: 170px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 140%;
+  color: #000000;
+}
+
+._widely {
+  max-width: 210px;
+}
+
+
