feat[part1]: add values block, add styles, finish base desktop

--- a/part1/styles/index.css
+++ b/part1/styles/index.css
@@ -3,3 +3,4 @@
 @import './layouts/header.css'; 
 @import './layouts/benefiits.css';
 @import './layouts/products.css';
+@import './layouts/values.css'; 
