--- a/part1/styles/fontello.css
+++ b/part1/styles/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?98443135');
-  src: url('../font/fontello.eot?98443135#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?98443135') format('woff2'),
-       url('../font/fontello.woff?98443135') format('woff'),
-       url('../font/fontello.ttf?98443135') format('truetype'),
-       url('../font/fontello.svg?98443135#fontello') format('svg');
+  src: url('../font/fontello.eot?42681453');
+  src: url('../font/fontello.eot?42681453#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?42681453') format('woff2'),
+       url('../font/fontello.woff?42681453') format('woff'),
+       url('../font/fontello.ttf?42681453') format('truetype'),
+       url('../font/fontello.svg?42681453#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?98443135#fontello') format('svg');
+    src: url('../font/fontello.svg?42681453#fontello') format('svg');
   }
 }
 */
@@ -59,7 +59,11 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.graphicon-:before { content: '\e800'; } /* '' */
-.activityicon-:before { content: '\e801'; } /* '' */
-.filtericon-:before { content: '\e802'; } /* '' */
-.settingicon-:before { content: '\e803'; } /* '' */
+.group-2206icon-:before { content: '\e801'; } /* '' */
+.group-2207icon-:before { content: '\e802'; } /* '' */
+.group-2190icon-:before { content: '\e803'; } /* '' */
+.__4icon-:before { content: '\e804'; } /* '' */
+.graphicon-:before { content: '\e805'; } /* '' */
+.settingicon-:before { content: '\e806'; } /* '' */
+.activityicon-:before { content: '\e807'; } /* '' */
+.filtericon-:before { content: '\e808'; } /* '' */
