--- a/part1/styles/normalize.css
+++ b/part1/styles/normalize.css
@@ -33,6 +33,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   margin: 0;
+  background-color: var(--secondary-background);
 }
 
 /**
