--- a/part1/styles/layouts/header.css
+++ b/part1/styles/layouts/header.css
@@ -7,7 +7,8 @@
 
 .header__wprapper {
   margin: 0px auto;
-  max-width: 1100px;
+  padding: 0 60px;
+  max-width: 1220px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -56,7 +57,6 @@
 }
 
 .app_info__container {
-  margin-right: 87px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -108,4 +108,54 @@
 
 .app_image__item {
   width: 578px;
+}
+
+@media (max-width: 376px) {
+  .header {
+    padding-bottom: 0px;
+    min-height: 1100px;
+    background: url('../../assets/main_mobile.svg') no-repeat;
+    background-size: 100%;
+    background-position: 20% 5%;
+    
+  }
+
+  .header__wprapper {
+    padding: 0 10px;
+  }
+  
+  .switch_lang__container {
+    margin-left: auto;
+    margin-top: 26px;
+    width: 67px;
+  }
+
+  .switch_lang__link {
+    margin-right: 5px;
+  }
+
+  .app_image__item {
+    display: none;
+  }
+
+  .app_image__container {
+    display: none;
+  }
+
+  .app_info__title {
+    margin-top: 463px;
+  }
+
+  .app_info__description {
+    margin-top: 14px;
+    width: 338px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 130%;
+  }
+
+  .app_info__btn {
+    width: 343px;
+  }
 }
