--- a/part1/styles/layouts/benefiits.css
+++ b/part1/styles/layouts/benefiits.css
@@ -20,6 +20,7 @@
 }
 
 .benefits_instruments__item {
+  position: relative;
   padding: 22px 20px 30px 20px;
   margin-right: 20px;
   display: flex;
@@ -29,10 +30,22 @@
   background: #ffffff;
   box-shadow: 6px 4px 12px rgba(0, 0, 0, 0.05);
   border-radius: 20px;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .benefits_instruments__item:last-child {
   margin-right: 0px;
+}
+
+.benefits_instruments__item:hover {
+  transform: scale(0.9);
+  transform-origin: top left 100px;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-in;
+  -webkit-box-shadow: 1px 2px 13px 3px rgba(9, 98, 232, 0.2);
+  -moz-box-shadow: 1px 2px 13px 3px rgba(9, 98, 232, 0.2);
+  box-shadow: 1px 2px 13px 3px rgba(9, 98, 232, 0.2);
 }
 
 .item__title {
@@ -43,12 +56,11 @@
   color: var(--text-secondary-color);
 }
 
-
 @media (max-width: 376px) {
   .benefits__wrapper {
     padding: 0 15px;
   }
-  
+
   .benefits_instruments__container {
     margin-top: -300px;
     display: flex;
@@ -58,7 +70,7 @@
     width: 343px;
     gap: 20px 10px;
   }
-  
+
   .benefits_instruments__item {
     padding: 0px 0px 0px 18px;
     margin-right: 0px;
@@ -72,13 +84,12 @@
     box-shadow: 6px 4px 12px rgba(0, 0, 0, 0.05);
     border-radius: 20px;
   }
-  
+
   .benefits_instruments__item:last-child {
     margin-right: 0px;
   }
-  
+
   .item__title {
     font-size: 1.4rem;
   }
-
 }
