--- a/part1/styles/layouts/products.css
+++ b/part1/styles/layouts/products.css
@@ -40,7 +40,7 @@
   flex-wrap: nowrap;
   max-width: 502px;
   height: 328px;
-  background: #e9f6ff;
+  background: #E9F6FF;
   border-radius: 30px;
 }
 
@@ -82,9 +82,9 @@
 
 
 
-@media (min-width: 375px) {
+@media (max-width: 376px) {
   .products__wrapper {
-    padding: 0 15px;
+    padding: 0px 15px;
   }
 
   .products__title {
@@ -112,11 +112,10 @@
     margin-right: 0px;
     display: flex;
     flex-direction: row;
-    /* align-items: flex-start; */
     flex-wrap: nowrap;
     width: 344px;
     max-height: 215px;
-    background: var(--secondary-background);
+    background: #E9F6FF;
     border-radius: 30px;
   }
 
